Fix y overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@ a:hover {
 	max-width: min(100%, 600px);
 }
 
+/* This is because it was broken on mobile, overflow not displayed.
+Consider wrapping all of these at top level in something which does the scroll. */
+.GameSelection, .GameSelection-GameList, .GameList {
+	height: 100%;
+	overflow-y: scroll;
+}
+
 /* Seriously need to make a single consistent Button class */
 .GameSelection-GameList > button {
 	background-color: aquamarine;
